[project]
name = "maneko-api"
version = "0.0.1"
requires-python = ">=3.12" # Latest Vercel Version
dependencies = [
    "blinker==1.9.0",
    "click==8.4.0",
    "djangorestframework-jwt==1.11.0",
    "flask==3.1.3",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "psycopg2-binary==2.9.12",
    "pyjwt==1.7.1",
    "python-dotenv==1.2.2",
    "werkzeug==3.1.8",
]


[tool.ruff]
line-length = 150

[tool.ruff.lint]
ignore = ["E501"]
